--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				new RGBELoader()
 					.setDataType(THREE.UnsignedByteType)
 					.setPath('textures/')
-					.load('photo_studio_01_1k.hdr', function(texture){
+					.load('modern_bathroom_1k.hdr', function(texture){
 
 						envmap = pmremGenerator.fromEquirectangular(texture).texture;
 
