--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 				<a class="ar-object" id="1" href="#">Gajah Blora</a>
 				<a class="ar-object" id="2" href="#">Homo Sapiens</a>
-				<a class="ar-object" id="3" href="#">Kerang</a>
+				<a class="ar-object" id="3" href="#">Tridagna</a>
 			</div>
 	
 			<div id="container" style="position: fixed;"></div>
