--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			import { OrbitControls } from './jsm/controls/OrbitControls.js';
 			import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
 			import { RGBELoader } from './jsm/loaders/RGBELoader.js';
-			import { RoughnessMipmapper } from './jsm/utils/RoughnessMipmapper.js';
+			//import { RoughnessMipmapper } from './jsm/utils/RoughnessMipmapper.js';
 
 			var container;
 			var camera, scene, renderer;
@@ -104,6 +104,10 @@
 						loader.load(model + ".glb", function(glb) {
 
 							current_object = glb.scene;
+
+							current_object.position.set( 0, -0.8, 0 );
+							current_object.scale.set( 0.5, 0.5, 0.5 );
+
 							scene.add(current_object);
 
 							arPlace();
@@ -126,10 +130,10 @@
 				scene = new THREE.Scene();
 				window.scene = scene;
 
-				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 0.001, 100 );
+				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 0.001, 1000 );
 
 				var directionalLight = new THREE.DirectionalLight(0xffffff, 0.1);
-				directionalLight.position.set(0, 10, 0).normalize();
+				directionalLight.position.set(0, 0, 0).normalize();
 				scene.add(directionalLight);
 
 
@@ -152,7 +156,7 @@
 				controls = new OrbitControls(camera, renderer.domElement);
 				controls.addEventListener('change', render);
 				controls.minDistance = 2;
-				controls.maxDistance = 10;
+				controls.maxDistance = 100;
 				controls.target.set(0, 0, -0.2);
 				controls.enableDamping = true;
 				controls.dampingFactor = 0.05;
