--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							current_object = glb.scene;
 
 							current_object.position.set( 0, -0.8, 0 );
-							current_object.scale.set( 0.5, 0.5, 0.5 );
+							//current_object.scale.set( 0.5, 0.5, 0.5 );
 
 							scene.add(current_object);
 
