--- a/index.html
+++ b/index.html
@@ -135,64 +135,32 @@
 				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 0.001, 1000 );
 				camera.position.set( - 1.8, 0.6, 2.7 );
 
-				//LIGHT
 				// LIGHTS
 
-				const hemiLight = new THREE.HemisphereLight( 0xffffff, 0xffffff, 2 );
-				hemiLight.color.setHSL( 0.6, 1, 0.6 );
+				const hemiLight = new THREE.HemisphereLight( 0xffffff, 0xffffff, 4);
+				hemiLight.color.setHSL( 0.6, 0.6, 0.65 );
 				hemiLight.groundColor.setHSL( 0.095, 1, 0.75 );
-				hemiLight.position.set( 0, 50, 0 );
+				hemiLight.position.set( 0, 0, 0 );
 				scene.add( hemiLight );
 
-				const hemiLightHelper = new THREE.HemisphereLightHelper( hemiLight, 10 );
-				scene.add( hemiLightHelper );
+				const dirLight1 = new THREE.DirectionalLight( 0xffffff, 6 );
+				dirLight1.color.setHSL( 0.1, 1, 0.95 );
+				dirLight1.position.set( 0, 1.75, 1 );
+				dirLight1.position.multiplyScalar( 30 );
+				dirLight1.castShadow = true;
+				scene.add( dirLight1 );
 
-				//
+				const dirLight2 = new THREE.DirectionalLight( 0xffffff, 6 );
+				dirLight2.color.setHSL( 0.1, 1, 0.95 );
+				dirLight2.position.set( 0, 1.75, -1 );
+				dirLight2.position.multiplyScalar( 30 );
+				dirLight2.castShadow = true;
+				scene.add( dirLight2 );
 
-				// const dirLight = new THREE.DirectionalLight( 0xffffff, 3 );
-				// dirLight.color.setHSL( 0.1, 1, 0.95 );
-				// dirLight.position.set( - 1, 1.75, 1 );
-				// dirLight.position.multiplyScalar( 30 );
-				// scene.add( dirLight );
+	
 
-				// dirLight.castShadow = true;
-
-				// dirLight.shadow.mapSize.width = 2048;
-				// dirLight.shadow.mapSize.height = 2048;
-
-				// const d = 50;
-
-				// dirLight.shadow.camera.left = - d;
-				// dirLight.shadow.camera.right = d;
-				// dirLight.shadow.camera.top = d;
-				// dirLight.shadow.camera.bottom = - d;
-
-				// dirLight.shadow.camera.far = 3500;
-				// dirLight.shadow.bias = - 0.0001;
-
-				// const dirLightHelper = new THREE.DirectionalLightHelper( dirLight, 10 );
-				// scene.add( dirLightHelper );
-
-
-
-				var directionalLight = new THREE.DirectionalLight(0xffffff, 0.1);
-				directionalLight.position.set(0, 0, 0).normalize();
-				scene.add(directionalLight);
-
-
-				//0x222222
-
-				/*var ambientLight = new THREE.AmbientLight(0x222222);
-				scene.add(ambientLight);8/
-
-				//
-
-				/*renderer = new THREE.WebGLRenderer( { antialias: true, alpha: true } );
-				renderer.setPixelRatio( window.devicePixelRatio );
-				renderer.setSize( window.innerWidth, window.innerHeight );
-				renderer.xr.enabled = true;
-				container.appendChild( renderer.domElement );*/
-
+				var ambientLight = new THREE.AmbientLight(0x222222);
+				scene.add(ambientLight);
 
 				renderer = new THREE.WebGLRenderer( { antialias: true } );
 				renderer.setPixelRatio( window.devicePixelRatio );
