--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			var hitTestSourceRequested = false;
 
 			init();
-			animate();
+			//animate();
 
 			$(".ar-object").click(function(){
 				if(current_object != null){
@@ -278,7 +278,7 @@
 
 			function animate() {
 				renderer.setAnimationLoop( render );
-				requestAnimationFrame(animate);
+				//requestAnimationFrame(animate);
 				controls.update();
 			}
 
