--- a/index.html
+++ b/index.html
@@ -112,24 +112,16 @@
 						loader.load(model + ".glb", function(glb) {
 
 							current_object = glb.scene;
-
 							current_object.position.set( 0, -0.8, 0 );
-							//current_object.scale.set( 0.5, 0.5, 0.5 );
-
 							scene.add(current_object);
 
 							arPlace();
-
 							var box = new THREE.Box3();
 							box.setFromObject(current_object);
 							box.getCenter(controls.target);
 
-
-							const gui = new GUI();
-							gui.add( object.material, 'sheen', 0, 1 );
-							gui.open();
-
 							controls.update();
+							
 							render();
 
 						});
@@ -278,7 +270,7 @@
 
 			function animate() {
 				renderer.setAnimationLoop( render );
-				//requestAnimationFrame(animate);
+				requestAnimationFrame(animate);
 				controls.update();
 			}
 
