--- a/index.html
+++ b/index.html
@@ -37,20 +37,14 @@
 		<script type="module">
 
 			import * as THREE from './build/three.module.js';
-
-			import WebGPU from './jsm/capabilities/WebGPU.js';
-			import WebGL from './jsm/capabilities/WebGL.js';
-
 			import { ARButton } from './jsm/webxr/ARButton.js';
-			//import { VRButton } from './jsm/webxr/VRButton.js';
-
+			import { VRButton } from './jsm/webxr/VRButton.js';
+			//
 			import { OrbitControls } from './jsm/controls/OrbitControls.js';
 			import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
 			import { RGBELoader } from './jsm/loaders/RGBELoader.js';
 			import { RoughnessMipmapper } from './jsm/utils/RoughnessMipmapper.js';
 
-			import { GUI } from './jsm/libs/lil-gui.module.min.js';
-			
 			var container;
 			var camera, scene, renderer;
 			var controller;
@@ -61,7 +55,7 @@
 			var hitTestSourceRequested = false;
 
 			init();
-			//animate();
+			animate();
 
 			$(".ar-object").click(function(){
 				if(current_object != null){
@@ -76,10 +70,10 @@
 				isAR = true;
 			});
 
-			/*$("#VRButton").click(function(){
+			$("#VRButton").click(function(){
 				scene.background = envmap;
 				scene.position.z = -2;
-			});*/
+			});
 
 			$("#place-button").click(function(){
 				arPlace();
@@ -97,13 +91,11 @@
 				new RGBELoader()
 					.setDataType(THREE.UnsignedByteType)
 					.setPath('textures/')
-					.load('modern_bathroom_1k.hdr', function(texture){
+					.load('photo_studio_01_1k.hdr', function(texture){
 
 						envmap = pmremGenerator.fromEquirectangular(texture).texture;
 
 						scene.environment = texture;
-
-						//scene.environment = envmap;
 						texture.dispose();
 						pmremGenerator.dispose();
 						render();
@@ -112,18 +104,16 @@
 						loader.load(model + ".glb", function(glb) {
 
 							current_object = glb.scene;
-							current_object.position.set( 0, -0.8, 0 );
 							scene.add(current_object);
 
 							arPlace();
+
 							var box = new THREE.Box3();
 							box.setFromObject(current_object);
-							box.getCenter(controls.target);
+							box.center(controls.target);
 
 							controls.update();
-							
 							render();
-
 						});
 					});
 			}
@@ -136,8 +126,7 @@
 				scene = new THREE.Scene();
 				window.scene = scene;
 
-				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 0.001, 1000 );
-				camera.position.set( - 1.8, 0.6, 2.7 );
+				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 0.001, 200 );
 
 				// LIGHTS
 
@@ -188,10 +177,13 @@
 				controls = new OrbitControls(camera, renderer.domElement);
 				controls.addEventListener('change', render);
 				controls.minDistance = 2;
-				controls.maxDistance = 100;
+				controls.maxDistance = 10;
 				controls.target.set(0, 0, -0.2);
 				controls.enableDamping = true;
 				controls.dampingFactor = 0.05;
+
+				//VR SETUP
+				document.body.appendChild(VRButton.createButton(renderer));
 
 				//AR SETUP
 
@@ -218,7 +210,7 @@
 
 				//
 
-				window.addEventListener( 'resize', onWindowResize,false);
+				window.addEventListener( 'resize', onWindowResize, false );
 
 				renderer.domElement.addEventListener('touchstart', function(e){
 					e.preventDefault();
@@ -264,14 +256,17 @@
 				camera.updateProjectionMatrix();
 
 				renderer.setSize( window.innerWidth, window.innerHeight );
+
 			}
 
 			//
 
 			function animate() {
+
 				renderer.setAnimationLoop( render );
 				requestAnimationFrame(animate);
 				controls.update();
+
 			}
 
 			function render( timestamp, frame ) {
