--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 				document.body.appendChild( ARButton.createButton(renderer, options));
 
-				document.body.appendChild( ARButton.createButton( renderer, { requiredFeatures: [ 'hit-test' ] } ) );
+				//document.body.appendChild( ARButton.createButton( renderer, { requiredFeatures: [ 'hit-test' ] } ) );
 
 				//
 
