--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 							scene.add(current_object);
 
 							arPlace();
+							backMenu();
 
 							var box = new THREE.Box3();
 							box.setFromObject(current_object);
