--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 			$("#ARButton").click(function(){
 				current_object.visible = false;
 				isAR = true;
+				document.getElementById("place-button").style.display = "none";
 			});
 
 			$("#VRButton").click(function(){
@@ -144,7 +145,7 @@
 							scene.add(current_object);
 
 							arPlace();
-							backMenu();
+							
 
 							var box = new THREE.Box3();
 							box.setFromObject(current_object);
