--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		<script>
 			function openNav() {
-			  document.getElementById("mySidenav").style.width = "250px";
+			  document.getElementById("mySidenav").style.width = "180px";
 			}
 			function closeNav() {
 			  document.getElementById("mySidenav").style.width = "0";
@@ -86,7 +86,6 @@
 			$("#ARButton").click(function(){
 				current_object.visible = false;
 				isAR = true;
-				document.getElementById("place-button").style.display = "none";
 			});
 
 			$("#VRButton").click(function(){
@@ -120,7 +119,7 @@
 							var box = new THREE.Box3();
 							box.setFromObject(current_object);
 							box.center(controls.target);
-							document.getElementById("place-button").style.display = "none";
+							//document.getElementById("place-button").style.display = "none";
 
 			}
 
@@ -405,6 +404,7 @@
 							box.setFromObject(current_object);
 							box.center(controls.target);
 							document.getElementById("place-button").style.display = "none";
+							document.getElementById("back-button").style.display = "none";
 
 						} );
 
@@ -421,6 +421,7 @@
 							var hit = hitTestResults[ 0 ];
 
 							document.getElementById("place-button").style.display = "block";
+							document.getElementById("back-button").style.display = "block";
 
 							reticle.visible = true;
 							reticle.matrix.fromArray( hit.getPose( referenceSpace ).transform.matrix );
@@ -430,6 +431,7 @@
 							reticle.visible = false;
 
 							document.getElementById("place-button").style.display = "none";
+							document.getElementById("back-button").style.display = "none";
 
 						}
 
