--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				if ( reticle.visible ) {
 					current_object.position.setFromMatrixPosition(reticle.matrix);
 					current_object.visible = true;
-					document.getElementById("back-button").style.display = "none";
+					//document.getElementById("back-button").style.display = "none";
 
 				}
 			}
