--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 							box.setFromObject(current_object);
 							box.center(controls.target);
 							document.getElementById("place-button").style.display = "none";
-							document.getElementById("back-button").style.display = "none";
+							//document.getElementById("back-button").style.display = "none";
 
 						} );
 
@@ -431,7 +431,7 @@
 							reticle.visible = false;
 
 							document.getElementById("place-button").style.display = "none";
-							document.getElementById("back-button").style.display = "none";
+							//document.getElementById("back-button").style.display = "none";
 
 						}
 
