--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
 
 			function backMenu(){
 
-				window.location.reload();
+				hitTestSourceRequested = false;
+				hitTestSource = null;
+				isAR = false;
+				window.addEventListener( 'resize', onWindowResize, true );
 
 			}
 
