--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Museum Geologi | AR Collections </title>
+		<title>AR Demo | AK47 </title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<link type="text/css" rel="stylesheet" href="main.css">
@@ -12,14 +12,14 @@
 		<div id="content">
 			<div id="mySidenav" class="sidenav">
 				<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-				<a class="ar-object" id="1" href="#">Gajah Blora</a>
-				<a class="ar-object" id="2" href="#">Homo Sapiens</a>
-				<a class="ar-object" id="3" href="#">Tridagna</a>
+				<a class="ar-object" id="1" href="#">AK 47</a>
+				<!-- <a class="ar-object" id="2" href="#">Homo Sapiens</a>
+				<a class="ar-object" id="3" href="#">Tridagna</a> -->
 			</div>
 
 			<div id="container" style="position: fixed;"></div>
 			  
-			<span style="font-size:14px;cursor:pointer;position: absolute;" onclick="openNav()">&#9776; Open Collections</span>
+			<span style="font-size:14px;cursor:pointer;position: absolute;" onclick="openNav()">&#9776; Weapon Collections</span>
 			<button type="button" id="place-button">PLACE</button>
 			<button type="button" id="back-button">BACK</button>
 		</div>
@@ -220,7 +220,7 @@
 				controls.dampingFactor = 0.05;
 
 				//VR SETUP
-				document.body.appendChild(VRButton.createButton(renderer));
+				//document.body.appendChild(VRButton.createButton(renderer));
 
 				//AR SETUP
 
