--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
 				dirLight1.castShadow = true;
 				scene.add( dirLight1 );
 
-				const dirLight2 = new THREE.DirectionalLight( 0xffffff, 2 );
-				dirLight2.color.setHSL( 0.1, 1, 0.95 );
-				dirLight2.position.set( 0, 10, -1 );
+				const dirLight2 = new THREE.DirectionalLight( 0xffffff, 5 );
+				//dirLight2.color.setHSL( 0.1, 1, 0.95 );
+				dirLight2.position.set( -5, 0, 0 );
 				dirLight2.position.multiplyScalar( 30 );
 				dirLight2.castShadow = true;
 				scene.add( dirLight2 );
@@ -182,12 +182,12 @@
 				var ambientLight = new THREE.AmbientLight(0x222222);
 				scene.add(ambientLight);
 
-				const hemiLight = new THREE.HemisphereLight( 0xffffff, 0x8d8d8d, 3 );
+				const hemiLight = new THREE.HemisphereLight( 0xffffff, 0x8d8d8d, 5 );
 				hemiLight.position.set( 0, 20, 0 );
 				scene.add( hemiLight );
 
-				const dirLight = new THREE.DirectionalLight( 0xffffff, 3 );
-				dirLight.position.set( 3, 10, 10 );
+				const dirLight = new THREE.DirectionalLight( 0xffffff, 5);
+				dirLight.position.set( 5, 0, 0 );
 				dirLight.castShadow = true;
 				dirLight.shadow.camera.top = 2;
 				dirLight.shadow.camera.bottom = - 2;
@@ -208,16 +208,29 @@
 				renderer.xr.enabled = true;
 				container.appendChild( renderer.domElement );
 
+
+			
+
+				scene.background = new THREE.Color( 0xAAAAAA );
+				
+
 				pmremGenerator = new THREE.PMREMGenerator(renderer);
 				pmremGenerator.compileEquirectangularShader();
 
-				controls = new OrbitControls(camera, renderer.domElement);
-				controls.addEventListener('change', render);
-				controls.minDistance = 2;
-				controls.maxDistance = 10;
-				controls.target.set(0, 0, -0.2);
+				// controls = new OrbitControls(camera, renderer.domElement);
+				// controls.addEventListener('change', render);
+				// controls.minDistance = 2;
+				// controls.maxDistance = 10;
+				// controls.target.set(0, 0, -0.2);
+				// controls.enableDamping = true;
+				// controls.dampingFactor = 0.05;
+
+				controls = new OrbitControls( camera, renderer.domElement );
 				controls.enableDamping = true;
-				controls.dampingFactor = 0.05;
+				controls.minDistance = 1;
+				controls.maxDistance = 10;
+				controls.target.set( 0, 0.35, 0 );
+				controls.update();
 
 				//VR SETUP
 				//document.body.appendChild(VRButton.createButton(renderer));
