--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 				renderer.shadowMap.enabled = true;
 				renderer.toneMapping = THREE.ACESFilmicToneMapping;
 				renderer.toneMappingExposure = 1;
-				renderer.xr.enabled = true;
+				//renderer.xr.enabled = true;
 				container.appendChild( renderer.domElement );
 
 
