--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				renderer.toneMapping = THREE.ACESFilmicToneMapping;
 				renderer.toneMappingExposure = 1;
-				renderer.xr.enabled = true;
+				//renderer.xr.enabled = true;
 				container.appendChild( renderer.domElement );
 
 
