--- a/index.html
+++ b/index.html
@@ -202,34 +202,19 @@
 				renderer = new THREE.WebGLRenderer( { antialias: true, alpha: true } );
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
-				renderer.toneMapping = THREE.ACESFilmicToneMapping;
-				renderer.toneMappingExposure = 1;
-				//renderer.xr.enabled = true;
+				renderer.xr.enabled = true;
 				container.appendChild( renderer.domElement );
-
-
-			
-
-				scene.background = new THREE.Color( 0xAAAAAA );
-				
 
 				pmremGenerator = new THREE.PMREMGenerator(renderer);
 				pmremGenerator.compileEquirectangularShader();
 
-				// controls = new OrbitControls(camera, renderer.domElement);
-				// controls.addEventListener('change', render);
-				// controls.minDistance = 2;
-				// controls.maxDistance = 10;
-				// controls.target.set(0, 0, -0.2);
-				// controls.enableDamping = true;
-				// controls.dampingFactor = 0.05;
-
-				controls = new OrbitControls( camera, renderer.domElement );
-				controls.enableDamping = true;
-				controls.minDistance = 1;
+				controls = new OrbitControls(camera, renderer.domElement);
+				controls.addEventListener('change', render);
+				controls.minDistance = 2;
 				controls.maxDistance = 10;
-				controls.target.set( 0, 0.35, 0 );
-				controls.update();
+				controls.target.set(0, 0, -0.2);
+				controls.enableDamping = true;
+				controls.dampingFactor = 0.05;
 
 				//VR SETUP
 				//document.body.appendChild(VRButton.createButton(renderer));
